--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
               npm install playwright-chromium
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              xvfb-run node colab.js ${{secrets.PASSWORD}}
+              xvfb-run node colab.js
         - uses: actions/upload-artifact@main
           with:
               path: videos
