--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
               path: videos
     clean:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */12 * * *'
+        if: github.event.schedule == '0 */12 * * *'
         steps:
         - uses: actions/setup-python@main
           with:
