--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     mime:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */1 * * *'
+        if: github.event.schedule == '0 */1 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
