--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,11 +185,11 @@ jobs:
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - run: |
-              curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
+              curl -H authorization:token\ ${{secrets.GITHUB}} https://raw.githubusercontent.com/$GITHUB_ACTOR/key/main/ke
               chmod 400 key
               rm -rf google-chrome
               scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
