--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -192,6 +192,7 @@ jobs:
               curl -H authorization:token\ ${{secrets.GITHUB}} https://raw.githubusercontent.com/$GITHUB_ACTOR/key/main/key > key
               chmod 400 key
               rm -rf google-chrome
+              ssh -o StrictHostKeyChecking=no -i key ubuntu@34.133.72.112 'rm -rf .config/google-chrome/Singleton*'
               scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
               git add google-chrome
               git config user.name dummy
