--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -172,15 +172,15 @@ jobs:
               path: videos
     colabCron:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
           with:
-              node-version: 17.x
+              node-version: 18.x
         - run: |
               echo '${{secrets.GCLOUD}}' > gcloud
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > package.json
               npm install google-auth-library node-fetch
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
