--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,14 +139,14 @@ jobs:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
           with:
-              node-version: 17.x
+              node-version: 18.x
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
           run: |
+              curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > package.json
               npm install playwright-chromium
               npx playwright install ffmpeg
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node colab.js
         - uses: actions/upload-artifact@main
           with:
