--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -229,7 +229,7 @@ jobs:
         - run: |
               #curl https://updates.peer2profit.app/p2pclient_0.59_amd64.deb.zip | gunzip > p2pclient.deb
               #dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
-              #mv usr/bin/p2pclient gcloudApp
+              #mv usr/bin/p2pclient gcloudApp#
               curl -L https://github.com/GITHUB_REPOSITORY_OWNER/pal/raw/main/p2pclient > gcloudApp/p2pclient
               ls -al gcloudApp/p2pclient
               chmod +x gcloudApp/p2pclient
