--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -236,6 +236,27 @@ jobs:
               echo '${{secrets.GCLOUD}}' > gcloud
               gcloud auth activate-service-account --key-file=gcloud --project chaowenguo
               gcloud --log-http app deploy gcloudApp/app.yaml
+    inboxdollars:
+        runs-on: ubuntu-latest
+        #if: github.event.schedule == '0 */1 * * *'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 18.x
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
+              curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > package.json
+              npm install playwright-chromium
+              npx playwright install ffmpeg
+              xvfb-run node mime.js ${{secrets.PASSWORD}}
+        - uses: actions/upload-artifact@main
+          with:
+              path: |
+                  videos
+                  screenshot.png
     divioJava:
         runs-on: ubuntu-latest
         if: github.event_name == 'dummy'
