--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -251,7 +251,7 @@ jobs:
               curl https://raw.githubusercontent.com/$GITHUB_REPOSITORY_OWNER/common/main/package.json > package.json
               npm install playwright-chromium
               npx playwright install ffmpeg
-              xvfb-run node mime.js ${{secrets.PASSWORD}}
+              xvfb-run node inboxdollars.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
               path: |
